Many changes. Bad git etiquette. Sorry :(

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,96 +46,92 @@
         </p>
       </h3>
 
-    </div>
+  </div>
 
-    <div class="pageThree" id="portfolios">
-      <h1 class="text-center">Portfolio</h1>
-      <h3 class="text-center">A bunch of things I've worked on and placeholders
+  <div class="pageThree" id="portfolios">
+    <h1 class="text-center">Portfolio</h1>
+    <h3 class="text-center">A bunch of things I've worked on and placeholders
         for others that I will work on shortly.
         <br>
       </h3>
-      <div class ="container-fluid">
-        <div class="row">
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-                <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832585/nb_lsoysf.png" alt="Native Brews">
-                  <div class="caption">
-                    <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Native Brews</a></h4>
-                      <p>Indian alcobev startup.</p>
-                  </div>
-            </div>
-          </div>
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-              <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/ada_lxftp1.png" alt="Ada Tribute">
-                <div class="caption">
-                  <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Ada Lovelace</a></h4>
-                  <p>FreeCodeCamp Tribute Page</p>
-                </div>
-            </div>
-          </div>
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-              <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832585/meta_ikn0wc.png" alt="Portfolio">
-                <div class="caption">
-                  <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Portfolio</a></h4>
-                  <p>FreeCodeCamp Portfolio Page</p>
-                </div>
+    <div class="container-fluid">
+      <div class="container row">
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832585/nb_lsoysf.png" alt="Native Brews">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Native Brews</a></h4>
+              <p>Indian alcobev startup.</p>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-              <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/random_quote_pgspcu.jpg" alt="Quote Generator">
-                <div class="caption">
-                  <h4><a class="portfolio" target="_blank" href="#">Quote Generator</a></h4>
-                  <p>FreeCodeCamp Quote Generator</p>
-                </div>
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/ada_lxftp1.png" alt="Ada Tribute">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Ada Lovelace</a></h4>
+              <p>FreeCodeCamp Tribute Page</p>
             </div>
           </div>
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-              <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/weather_paois9.png" alt="Weather">
-                <div class="caption">
-                  <h4><a class="portfolio" target="_blank" href="#">Weather App</a></h4>
-                  <p>FreeCodeCamp Weather App</p>
-                </div>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832585/meta_ikn0wc.png" alt="Portfolio">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href="https://codepen.io/artismarti/full/akrZoB/">Portfolio</a></h4>
+              <p>FreeCodeCamp Portfolio Page</p>
             </div>
           </div>
-          <div class ="col-md-4 col-sm-2">
-            <div class="thumbnail">
-              <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/wiki_drnvs3.png" alt="Wikipedia Viewer">
-                <div class="caption">
-                  <h4><a class="portfolio" target="_blank" href"#">Wikipedia Viewer</a></h4>
-                  <p>FreeCodeCamp Wikipedia Viewer</p>
-                </div>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/random_quote_pgspcu.jpg" alt="Quote Generator">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href="#">Quote Generator</a></h4>
+              <p>FreeCodeCamp Quote Generator</p>
             </div>
           </div>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/weather_paois9.png" alt="Weather">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href="#">Weather App</a></h4>
+              <p>FreeCodeCamp Weather App</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <div class="thumbnail">
+            <img class="port_img" src="http://res.cloudinary.com/artismarti/image/upload/v1474832584/wiki_drnvs3.png" alt="Wikipedia Viewer">
+            <div class="caption">
+              <h4><a class="portfolio" target="_blank" href"#">Wikipedia Viewer</a></h4>
+              <p>FreeCodeCamp Wikipedia Viewer</p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+
+      <div class="pageFour" id="contact">
+        <h1 class="text-center">Contact</h1>
+
+        <div class="btn-list text-center">
+          <a class="btn" href="https://www.freecodecamp.com/artismarti" target="_blank">
+            <i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i>
+          </a>
+          <a class="btn" href="http://github.com/artismarti" target="_blank">
+            <i class="fa fa-3x fa-github" aria-hidden="true"></i>
+          </a>
+          <a class="btn" href="https://codepen.io/artismarti/" target="_blank">
+            <i class="fa fa-3x fa-codepen" aria-hidden="true"></i>
+          </a>
+          <a class="btn" href="http://twitter.com/artismarti" target="_blank">
+            <i class="fa fa-3x fa-twitter" aria-hidden="true"></i>
+          </a>
+          <a class="btn" href="http://linkedin.com/in/artismarti" target="_blank">
+            <i class="fa fa-3x fa-linkedin" aria-hidden="true"></i>
+          </a>
+        </div>
+
+      </div>
   </div>
-
-  <div class="pageFour" id="contact">
-    <h1 class="text-center">Contact</h1>
-
-       <div class="btn-list text-center">
-           <a class="btn" href="https://www.freecodecamp.com/artismarti" target="_blank">
-             <i class="fa fa-3x fa-facebook-official" aria-hidden="true"></i>
-           </a>
-           <a class="btn" href="http://github.com/artismarti" target="_blank">
-             <i class="fa fa-3x fa-github" aria-hidden="true"></i>
-           </a>
-           <a class="btn" href="https://codepen.io/artismarti/" target="_blank">
-             <i class="fa fa-3x fa-codepen" aria-hidden="true"></i>
-           </a>
-           <a class="btn" href="http://twitter.com/artismarti" target="_blank">
-             <i class="fa fa-3x fa-twitter" aria-hidden="true"></i>
-           </a>
-           <a class="btn" href="http://linkedin.com/in/artismarti" target="_blank">
-             <i class="fa fa-3x fa-linkedin" aria-hidden="true"></i>
-           </a>
-       </div>
-
-</div>
-</div>
